--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 body {
     min-height: 100vh;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     align-items: center;
     background-color: var(--gallery);
