--- a/src/Components/ButtonComponent/index.css
+++ b/src/Components/ButtonComponent/index.css
@@ -6,6 +6,9 @@
     cursor: pointer;
     color: var(--thunder);
     font-weight: 500;
+    text-decoration: none;
+    width: 100px;
+    align-self: center;
 }
 
 .download-cv-button:hover {
