--- a/src/Components/SkillsComponent/SkillsColumnComponent/index.css
+++ b/src/Components/SkillsComponent/SkillsColumnComponent/index.css
@@ -1,13 +1,12 @@
 .skills-column {
-    border: 5px solid var(--jelly-bean);
-    border-radius: 10%;
-    padding: 0;
+    border-radius: 5%;
+    padding: 2rem;
     color: var(--jelly-bean);
-    background-color: var(--tan);
+    background-color: white;
     text-decoration: none;
     margin: 1rem auto;
-    height: 300px;
     width: 250px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 ul {
@@ -15,6 +14,30 @@ ul {
     padding: 0;
 }
 
-ul li {
-    margin-top: 0.5rem;
+.fa-icon {
+    margin: 1rem 0.5rem 0.5rem 0.5rem;
 }
+
+.skills-column-description {
+    font-size: medium;
+    color: var(--thunder);
+    margin-bottom: 10px;
+}
+
+.skills-toolList {
+    list-style: none;
+    padding: 0;
+}
+
+.skills-toolList li {
+    color: var(--thunder);
+    margin-bottom: 1rem;
+}
+
+.skill-list {
+    color: var(--thunder);
+    display: flex;
+    justify-content: center;
+}
+
+.skills-toolList {}
