--- a/src/Components/ProjectsComponent/index.css
+++ b/src/Components/ProjectsComponent/index.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid var(--jelly-bean);
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     background-color: white;
+    border-radius: 5px;
 }
