--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@
 
 body {
     min-height: 100vh;
-    /* display: flex; */
     flex-direction: column;
     align-items: center;
     background-color: var(--gallery);
@@ -29,6 +28,7 @@ body {
     width: 300px;
     height: 300px;
     margin-top: 1rem;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .skills-header {
@@ -43,4 +43,5 @@ body {
     font-size: xx-large;
 }
 
-.projects-header {}
+.projects-header {
+}
