--- a/src/Components/SkillsComponent/index.css
+++ b/src/Components/SkillsComponent/index.css
@@ -1,8 +1,17 @@
 .skills-container.horizontal {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
     grid-auto-flow: column;
     align-self: center;
     padding: 1rem;
+    width: 1500px;
+}
+
+.skills-grid-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
 }
