--- a/src/Components/HeaderComponent/index.css
+++ b/src/Components/HeaderComponent/index.css
@@ -20,6 +20,7 @@ nav a {
     padding: 10px;
     border-radius: 5px;
     align-items: center;
+    transition: color 0.3s, background-color 0.3s;
 }
 
 nav a:hover {
