--- a/src/Components/HeaderComponent/index.css
+++ b/src/Components/HeaderComponent/index.css
@@ -32,3 +32,15 @@ nav a:hover {
     width: 50px;
     height: 50px;
 }
+
+@media (max-width: 786px) {
+    header {
+        width: 100vw;
+    }
+    .nav-links {
+        display: none;
+    }
+    .nav_title {
+        margin: 1rem;
+    }
+}
