--- a/src/Components/HeaderComponent/index.css
+++ b/src/Components/HeaderComponent/index.css
@@ -1,10 +1,16 @@
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 20px 0 10px 0;
-    width: 800px;
-    align-self: center;
+    width: 100vw;
+}
+
+.header-container {
+    display: flex;
+    width: 1000px;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav {
@@ -36,6 +42,10 @@ nav a:hover {
 @media (max-width: 786px) {
     header {
         width: 100vw;
+        border: 1px solid black;
+    }
+    .header-container {
+        justify-content: flex-start;
     }
     .nav-links {
         display: none;
