--- a/src/Components/HeaderComponent/index.css
+++ b/src/Components/HeaderComponent/index.css
@@ -6,11 +6,22 @@ header {
     width: 100vw;
 }
 
+header nav {
+    display: flex;
+}
+
+.fa-header-icon {
+    margin: 20px;
+}
+
 .header-container {
     display: flex;
     width: 1000px;
     justify-content: space-evenly;
     align-items: center;
+}
+.fa-header-icon {
+    margin: 20px;
 }
 
 nav {
@@ -37,6 +48,11 @@ nav a:hover {
 .nav_title {
     width: 50px;
     height: 50px;
+    cursor: pointer;
+}
+
+.fullscreen-menu {
+    display: none; /* Hide by default */
 }
 
 @media (max-width: 786px) {
@@ -52,5 +68,33 @@ nav a:hover {
     }
     .nav_title {
         margin: 1rem;
+    }
+    .fullscreen-menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.9);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 999;
+    }
+    .fullscreen-nav-links {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .fullscreen-nav-links a {
+        color: #fff;
+        font-size: 2rem;
+        margin: 1rem;
+        text-decoration: none;
+        cursor: pointer;
+        transition: color 0.3s ease;
+    }
+    .fullscreen-nav-links a:hover {
+        color: #ff6347;
     }
 }
