feat: modifications for mobile; feature complete

--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,14 @@ body {
 .about-header {
     font-size: xx-large;
 }
+
+@media (max-width: 786px) {
+    #about {
+        width: 100vw;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+}
