--- a/src/Components/SkillsComponent/index.css
+++ b/src/Components/SkillsComponent/index.css
@@ -15,3 +15,9 @@
     align-items: center;
     padding: 0;
 }
+
+@media (max-width: 786px) {
+    .skills-container.horizontal {
+        display: block;
+    }
+}
