--- a/src/Components/WorkExperienceComponent/EducationComponent/index.css
+++ b/src/Components/WorkExperienceComponent/EducationComponent/index.css
@@ -11,3 +11,14 @@
     margin: 2rem;
     align-self: center;
 }
+
+@media (max-width: 786px) {
+    .work-experience-grid {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 90vw;
+        margin: 1rem;
+    }
+}
