--- a/src/Components/WorkExperienceComponent/EducationComponent/WorkExperienceItem/index.css
+++ b/src/Components/WorkExperienceComponent/EducationComponent/WorkExperienceItem/index.css
@@ -1,10 +1,11 @@
 .work-experience-item {
     display: grid;
-    grid-template-columns: 0.5fr 0.5fr 2fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1.5fr 1.5fr;
+    grid-template-rows: 2fr 0.5fr 0.5fr;
+    grid-auto-columns: 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
-    grid-template-areas: "work-experience-item-start-year work-experience-item-end-year work-experience-item-title" "work-experience-item-start-year work-experience-item-end-year work-experience-item-details";
+    grid-template-areas: "work-experience-item-start-year work-experience-item-end-year" "work-experience-item-title work-experience-item-title" "work-experience-item-details work-experience-item-details";
     background-color: white;
 }
 
@@ -20,11 +21,12 @@
     color: var(--tan);
     padding: 5px;
     flex-direction: column;
-    width: 100px;
+    width: -webkit-fill-available;
 }
 
 .work-experience-item-end-year {
     grid-area: work-experience-item-end-year;
+    width: -webkit-fill-available;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -35,7 +37,6 @@
     color: var(--tan);
     padding: 5px;
     flex-direction: column;
-    width: 100px;
 }
 
 .work-experience-item-details {
@@ -67,7 +68,6 @@
         width: 80vw;
         border: 1px solid;
     }
-
     .work-experience-item {
         display: grid;
         grid-template-columns: 1.5fr 1.5fr;
@@ -75,25 +75,18 @@
         grid-auto-columns: 1fr;
         gap: 0px 0px;
         grid-auto-flow: row;
-        grid-template-areas:
-            "work-experience-item-start-year work-experience-item-end-year"
-            "work-experience-item-title work-experience-item-title"
-            "work-experience-item-details work-experience-item-details";
+        grid-template-areas: "work-experience-item-start-year work-experience-item-end-year" "work-experience-item-title work-experience-item-title" "work-experience-item-details work-experience-item-details";
     }
-
     .work-experience-item-details {
         grid-area: work-experience-item-details;
     }
-
     .work-experience-item-title {
         grid-area: work-experience-item-title;
     }
-
     .work-experience-item-start-year {
         grid-area: work-experience-item-start-year;
         width: -webkit-fill-available;
     }
-
     .work-experience-item-end-year {
         grid-area: work-experience-item-end-year;
         width: -webkit-fill-available;
