feat: added correct links; modified cv button @media

--- a/src/Components/ButtonComponent/index.css
+++ b/src/Components/ButtonComponent/index.css
@@ -24,3 +24,10 @@
     width: 100%;
     justify-content: center;
 }
+
+@media (max-width: 786px) {
+    .download-cv-button {
+        justify-content: space-evenly;
+        align-items: center;
+    }
+}
