--- a/src/Components/ProjectsComponent/index.css
+++ b/src/Components/ProjectsComponent/index.css
@@ -20,4 +20,6 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     background-color: white;
     border-radius: 5px;
+    padding: 1rem;
+    border: 2px solid var(--jelly-bean);
 }
