--- a/src/Components/EducationComponent/EducationItem/index.css
+++ b/src/Components/EducationComponent/EducationItem/index.css
@@ -19,6 +19,9 @@
     border: 2px solid var(--jelly-bean);
     margin: 0;
     padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .experience-item-title {
@@ -26,6 +29,9 @@
     border: 2px solid var(--jelly-bean);
     margin: 0;
     padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .experience-item-year {
@@ -45,6 +51,9 @@
     border: 2px solid var(--jelly-bean);
     padding: 0.5rem;
     background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media (max-width: 786px) {
