--- a/src/Components/FooterComponent/index.css
+++ b/src/Components/FooterComponent/index.css
@@ -8,13 +8,13 @@
 .footer-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 0.5fr;
+    grid-template-rows: 1fr;
     grid-auto-columns: 1fr;
     gap: 20px 20px;
     grid-auto-flow: row;
     grid-template-areas: "footer-job-opp footer-connect footer-gig-work" "footer-social-links footer-social-links footer-social-links";
     width: 75%;
-    height: 400px;
+    height: fit-content;
     font-size: large;
 }
 
