--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
     --thunder: #353135;
     --westar: #e8e6e3;
     --cloud: #C8C3BC;
+    --another-cloud: #D0CDC9;
 }
 
 .App {
@@ -13,6 +14,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    background-color: var(--another-cloud);
 }
 
 body {
